--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,26 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#dbd279",
-        "activityBar.background": "#dbd279",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#29978d",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#dbd279",
-        "statusBar.background": "#d0c451",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#bbae33",
-        "statusBarItem.remoteBackground": "#d0c451",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#d0c451",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#d0c45199",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#767943",
+        "activityBar.background": "#767943",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#84b8bb",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#767943",
+        "statusBar.background": "#565831",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#767943",
+        "statusBarItem.remoteBackground": "#565831",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#565831",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#56583199",
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "panel.border": "#767943",
+        "sideBar.border": "#767943",
+        "statusBar.border": "#565831",
+        "titleBar.border": "#565831"
     },
-    "peacock.color": "#d0c451"
+    "peacock.color": "#565831"
 }
